gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

1999-11-11  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Fixed the dialog box title for the SAVEAS_CLOSE
	  case

	* src/o_net.c: Fixed a nasty bug when enabling net consolidation 
	  and drawing non-ortho nets (non-ortho nets would disappear, since
	  gschem thought it could consolidate them; it cannot not)

	* src/x_menu.c: Change Edit/Stretch to read Edit/Stretch Mode

1999-11-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Fixed all calls to s_clib_getfiles with the
	  right number of arguments (new filter argument)

1999-11-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* examples/adders_1.sch: Fixed a label= attribute which was
	  incorrectly spelled (1abel)

1999-10-19  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/gschem.c: Found/Fixed an old bug which basically was causing
	  the first argument to always be interpreted as a filename which isn't	
	  always true.

1999-10-18  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_print.c: Added some error checking to properly log 
	  a successful print or error

1999-10-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_rc.c: Fixed component-library and source-library keywords
	  to add the current working directory (conditionally) to the
	  specified path.  This fixes the bug which Mike Jarabek pointed 
	  out when specifing relative path component/source libraries

1999-10-14  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Changed Close button to be Cancel when doing
	  Open... or Save As... (Stefan pointed this out)

1999-10-13  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Fixed the callback setup for the enter key for