@@ -143,6 +143,9 @@ static GtkItemFactoryEntry popup_items[] = {
 	{"/Bus", 		NULL, i_callback_add_bus, 0, NULL},
 	{"/Text", 		NULL, i_callback_add_text, 0, NULL},
   	{"/sep1", NULL, NULL, 0, "<Separator>"},
+	{"/Zoom in",            NULL, i_callback_view_zoom_in, 0, NULL},
+	{"/Zoom out",           NULL, i_callback_view_zoom_out, 0, NULL},
+  	{"/sep1", NULL, NULL, 0, "<Separator>"},
 	{"/Select", 		NULL, i_callback_edit_select, 0, NULL},
 	{"/Edit...", 		NULL, i_callback_edit_edit, 0, NULL},
 	{"/Copy", 		NULL, i_callback_edit_copy, 0, NULL},
